# django-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml  ci.yml
config/: settings.py
src/config/: settings.py
