[project]
name = "django-template"  # Project name
version = "0.1.0"         # Initial version of the project
description = "A Django project template"  # Short description of the project
authors = [
    {name = "Matus Kocik", email = "matuskocik@gmail.com"}  # Author details
]
license = {text = "MIT"}  # Project license type
readme = "README.md"      # Readme file for documentation
requires-python = ">=3.13"  # Minimum required Python version
dependencies = [
    "django (>=5.1.5,<6.0.0)"  # Main project dependency (Django framework)
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]  # Poetry's core dependency
build-backend = "poetry.core.masonry.api"  # Backend for build system

[tool.poetry.group.dev.dependencies]
# Development dependencies
black = "^24.10.0"  # Code formatter to enforce consistent style
isort = "^5.13.2"   # Automatic sorting of imports
ruff = "^0.9.2"     # Fast linter for Python
mypy = "^1.14.1"
django-stubs = "^5.1.2"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pre-commit = "^4.0.1"

[tool.black]
# Black configuration (code formatting)
line-length = 88  # Maximum line length, Black's default is 88.

[tool.isort]
# isort configuration (sorting imports)
profile = "black"  # Adjust isort to work seamlessly with Black.

[tool.ruff]
# Ruff configuration (linting and style checking)
line-length = 88    # Maximum line length, aligned with Black and isort.
select = ["E", "F", "I"]  # Check for errors (E), formatting (F), and imports (I).
fixable = ["I"]     # Allow Ruff to fix import sorting if needed.
